# vibehive

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  QUICKSTART.md  README.md  pyproject.toml  register-mcp.sh  setup-hive.sh  setup-orchestrator.sh  start-hive.sh
.claude/: settings.json
.claude/agents/: commit-agent.md  review-efficiency.md  review-modernization.md  review-readability.md  review-security.md  test-agent.md
.claude/commands/: commit.md  hive-direct.md  hive-mission.md  hive-status.md  hive.md  review.md  test.md
.claude/rules/: security.md  style.md
.claude/scripts/: token_splitter.py
apps/desktop/: index.html  package.json  pnpm-lock.yaml
apps/desktop/src/: App.tsx  app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/chat/: AgentChatPanel.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessageBubble.tsx  ChatMessageList.tsx
apps/desktop/src/components/dashboard/: AgentCard.tsx  TeamDashboard.tsx
apps/desktop/src/components/history/: MissionDetailPanel.tsx  MissionHistory.tsx  MissionHistoryItem.tsx
apps/desktop/src/hooks/: useAutoScroll.ts  useHealthCheck.ts  useSleepTimer.ts  useWebSocket.ts
apps/desktop/src/lib/: api.ts  constants.ts
apps/desktop/src/stores/: agentStore.ts  chatStore.ts  connectionStore.ts  missionStore.ts
apps/desktop/src/types/: agent.ts  chat.ts  mission.ts  token.ts  websocket.ts
docs/changelog/: CURRENT.md
tests/core/: test_agent_loader.py  test_orchestrator.py  test_shared_context.py
(+30 files in other folders)
